fdo#45777: handling of whitespaces in hyperlinks

Remove leading and trailing whitespaces in the hyperlink dialog, because
the resulting links would be unusable.

Change-Id: Icf617daf51508a37494536e02fb298fb3cf746c5